horizontal scrollbar fix on tileView page

--- a/davidow/platforms/android/assets/www/css/masterLight.css
+++ b/davidow/platforms/android/assets/www/css/masterLight.css
@@ -232,22 +232,35 @@ p{
 
 /* Bottom Nav */
 .bottom-nav{
-       position: fixed;
-    background-color: #000;
-    height: 65px;
-    bottom: 0;
-    padding-top: 10px;
-    width: 100%;
-    text-align: center;
+  position: fixed;
+  background-color: #151515;
+  height: 65px;
+  bottom: 0;
+  padding-top: 10px;
+  width: 100%;
+  text-align: center;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#212121+0,141414+100 */
+  background: rgb(33,33,33); /* Old browsers */
+}
+
+.bottom-nav a{
+  display: inline-block;
+  height: 45px;
+  width: 30%;
+}
+
+.bottom-nav a:nth-child(2) {
+  border-left: 1px solid #101010;
+  border-right: 1px solid #101010;
 }
 
 .bottom-nav img{
-   padding-left: 6%;
-    padding-right: 6%;
-    height: 70%;
-    margin-top:4px;
-    max-width: 100%;
-    display:inline-block;
+ padding-left: 6%;
+  padding-right: 6%;
+  height: 70%;
+  margin-top:4px;
+  max-width: 100%;
+  display:inline-block;
 }
 
 /*Side Nav*/
